# types

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml  test.yml
include/: globals.hpp  int.hpp  uint.hpp  view_ref_storage.hpp
tests/: uint.cpp
tests/cases/: uint1024_256_add.txt  uint1024_256_mul.txt  uint1024_256_samples.txt  uint1024_256_sub.txt  uint1024_add.txt  uint1024_mul.txt  uint1024_sub.txt  uint32768_mul.txt
